test: use soapui mock instead of mock adapter for document-service

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -51,7 +51,7 @@ openforms2bpel.bpel.basic-service.allow-self-signed-certs=false
 openforms2bpel.bpel.basic-service.ignore-expired-certs=false
 openforms2bpel.bpel.basic-service.timeout=60000
 
-openforms2bpel.bpel.documents-service.endoint=http://localhost:8080/services/${openforms2bpel.bpel.documents-service.mock-endpoint}
+openforms2bpel.bpel.documents-service.endoint=http://host.docker.internal:8093/mock/DocumentService
 openforms2bpel.bpel.documents-service.verify-hostname=true
 openforms2bpel.bpel.documents-service.allow-self-signed-certs=false
 openforms2bpel.bpel.documents-service.ignore-expired-certs=false
