--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,14 +120,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: yarn
+          cache: npm
           cache-dependency-path: docusaurus/package-lock.json
 
       - name: Install dependencies
-        run: cd ./docusaurus && yarn install --frozen-lockfile --non-interactive
+        run: cd ./docusaurus && npm install --frozen-lockfile --non-interactive
 
       - name: Build
-        run: cd ./docusaurus && yarn build
+        run: cd ./docusaurus && npm build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
