--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: npm
           cache-dependency-path: docusaurus/package-lock.json
 
@@ -61,7 +61,7 @@ jobs:
         run: cd ./docusaurus && npm install --frozen-lockfile --non-interactive
 
       - name: Build
-        run: cd ./docusaurus && npm build
+        run: cd ./docusaurus && npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
