--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
         run: cd ./docusaurus && npm install --frozen-lockfile --non-interactive
 
       - name: Build
-        run: cd ./docusaurus && npm build
+        run: cd ./docusaurus && npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
