--- a/src/main/resources/DeploymentSpecifics.properties
+++ b/src/main/resources/DeploymentSpecifics.properties
@@ -66,6 +66,7 @@ openforms2bpel.noreply-smtp.mail-templates-file=MailTemplates.xml
 
 openforms2bpel.workflows.tweewegcommunicatie.on-case-not-found.mail-template=
 openforms2bpel.workflows.tweewegcommunicatie.on-subject-not-equals-case-subject.mail-template=
+openforms2bpel.workflows.tweewegcommunicatie.on-case-closed.mail-template=
 
 openforms2bpel.workflows.auto-retry.cron-expression=0 0/30 * * * ?
 openforms2bpel.workflows.auto-retry.max-retries=5
