test: larva unit-tests for selectBox feature in FormDataTransforms_Custom.xslt

--- a/src/test/testtool/FormDataTransform_Custom/RegressionTest.properties
+++ b/src/test/testtool/FormDataTransform_Custom/RegressionTest.properties
@@ -1,4 +1,4 @@
-scenario.description = FormDataTransform_Custom Regression Test'
+scenario.description = Regression
 
 include =../common.properties
 
