--- a/src/test/testtool/FormDataTransform_Default/RegressionTest.properties
+++ b/src/test/testtool/FormDataTransform_Default/RegressionTest.properties
@@ -2,8 +2,10 @@ scenario.description = FormDataTransform_Default Regression Test'
 
 include =../common.properties
 
+openforms2bpel.workflows.formdata-transform-stylesheet-file=FormDataTransform_Default.xslt
+
 bpel.FormDataTransform_Default.className   = nl.nn.adapterframework.testtool.XsltProviderListener
-bpel.FormDataTransform_Default.filename    = bpel/Common/xsl/FormDataTransform_Default.xslt
+bpel.FormDataTransform_Default.filename    = FormDataTransform_Default.xslt
 
 step1.bpel.FormDataTransform_Default.read = RegressionTest/in.xml
 step2.bpel.FormDataTransform_Default.write = RegressionTest/out.xml
