openforms2bpel v2.0.0 wip

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -26,6 +26,8 @@ Bpel_Mtom_Mock.Active=true
 Bpel_Mtom_PostAddDocument.Active=true
 Bpel_Payment_Post.Active=true
 ConvertISO639Taal.Active=true
+GenerateAuthorizationHeaderForDocumentenApi.Active=true
+GenerateAuthorizationHeaderForNotificatiesApi.Active=true
 ImportFromLocalFS.Active=true
 Notificaties_Subscribe.Active=true
 UpdateInitiatingSubjectCommandHandler.Active=true
