--- a/src/main/configurations/notificaties-api-server/DeploymentSpecifics.properties
+++ b/src/main/configurations/notificaties-api-server/DeploymentSpecifics.properties
@@ -4,5 +4,6 @@
 #
 # The values in this file override the values in AppConstants.properties
 
+GenerateAuthorizationHeaderForObjectsApi.active=true
 notificaties_notificaties_create.active=true
 
