refactor: no-reply mail sender adapter follows dedicated no-reply-smtp.enabled toggle for adapter active state

--- a/src/main/configurations/bpel/DeploymentSpecifics.properties
+++ b/src/main/configurations/bpel/DeploymentSpecifics.properties
@@ -6,37 +6,37 @@
 
 # the name of this instance of the AdapterFramework
 
-active.ifsa=false
-active.config.database=true
+active.ifsa: false
+active.config.database: true
 
-Bpel_Basic_Mock.Active=true
-Bpel_Basic_PostInitiate.Active=true
-Bpel_Basic_PostRegister.Active=true
-Bpel_BasicStatusUpdate_PostDocumentStatus.Active=true
-Bpel_BasicStatusUpdate_PostUpdateStatus.Active=true
-Bpel_Cases_Post.Active=true
-Bpel_Documents_Mock.Active=true
-Bpel_Documents_Post.Active=true
-Handler_AddDocumentsToCaseCommand.Active=true
-Handler_AddDocumentToCaseCommand.Active=true
-Handler_SendNoReplyUserEmailCommand.Active=true
-Handler_UpdateInitiatingSubjectGegMagCommand.Active=true
-Bpel_GegMag_Post.Active=true
-Bpel_Mtom_Mock.Active=true
-Bpel_Mtom_PostAddDocument.Active=true
-Bpel_Payment_Post.Active=true
-ConvertISO639Taal.Active=true
-GenerateAuthorizationHeaderForDocumentenApi.Active=true
-GenerateAuthorizationHeaderForNotificatiesApi.Active=true
-ImportFromLocalFS.Active=true
-Notificaties_Subscribe.Active=true
-UpdateInitiatingSubjectCommandHandler.Active=true
-UpdatePaymentCommandHandler.Active=true
-Workflow_Fallback.Active=true
-Workflow_TwoWayCommunication.Active=true
-Workflow_UwGegevens.Active=true
-WorkflowSelector.Active=true
+Bpel_Basic_Mock.Active: true
+Bpel_Basic_PostInitiate.Active: true
+Bpel_Basic_PostRegister.Active: true
+Bpel_BasicStatusUpdate_PostDocumentStatus.Active: true
+Bpel_BasicStatusUpdate_PostUpdateStatus.Active: true
+Bpel_Cases_Post.Active: true
+Bpel_Documents_Mock.Active: true
+Bpel_Documents_Post.Active: true
+Handler_AddDocumentsToCaseCommand.Active: true
+Handler_AddDocumentToCaseCommand.Active: true
+Handler_SendNoReplyUserEmailCommand.Active: ${openforms2bpel.connections.noReplySmtp.enabled}
+Handler_UpdateInitiatingSubjectGegMagCommand.Active: true
+Bpel_GegMag_Post.Active: true
+Bpel_Mtom_Mock.Active: true
+Bpel_Mtom_PostAddDocument.Active: true
+Bpel_Payment_Post.Active: true
+ConvertISO639Taal.Active: true
+GenerateAuthorizationHeaderForDocumentenApi.Active: true
+GenerateAuthorizationHeaderForNotificatiesApi.Active: true
+ImportFromLocalFS.Active: true
+Notificaties_Subscribe.Active: true
+UpdateInitiatingSubjectCommandHandler.Active: true
+UpdatePaymentCommandHandler.Active: true
+Workflow_Fallback.Active: true
+Workflow_TwoWayCommunication.Active: true
+Workflow_UwGegevens.Active: true
+WorkflowSelector.Active: true
 
 # suppress warning keys
-warnings.suppress.defaultvalue=true
-loadBalancer.url=
+warnings.suppress.defaultvalue: true
+loadBalancer.url: 
