--- a/docker-compose.zaakbrug.dev.yml
+++ b/docker-compose.zaakbrug.dev.yml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       args:
-        FF_VERSION: ${FF_VERSION:-8.1.0-RC2-20240411.160355}
+        FF_VERSION: ${FF_VERSION:-9.0.0-20241129.042326}
     image: wearefrank/openforms2bpel:${OPENFORMS2BPEL_VERSION:-latest}
     environment:
       zaakbrug.zds.timezone: UTC
